src/main/resources/yamls/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devplatform-gateway
  namespace: dev-platform
  labels:
    app: devplatform-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devplatform-gateway
  template:
    metadata:
      labels:
        app: devplatform-gateway
    spec:
      containers:
        - name: devplatform-gateway
          image: harbor.registry.notypie.dev/test_project/devplt-gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
